# mini_pwa

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/: config.yml  generate_data.py  toy_params.json
include/: cg_coeff.h  data.h  decay.h  dfunction.h  fcn.h  tensor.h  variable.h
src/: cg_coeff.cpp  decay.cpp  dfunction.cpp  fcn.cpp  main.cpp  variable.cpp
test/: CMakeLists.txt  test1.cpp
